--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,9 @@
 asgiref==3.5.2
+boto3==1.24.74
 backports.zoneinfo==0.2.1
 environs==9.5.0
 Django==4.0.5
+django-storages==1.13.1
 huey==2.4.3
 psycopg2==2.9.3
 sqlparse==0.4.2
